--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   table_calendar: ^3.0.9
   intl: ^0.19.0
+  flutter_rounded_date_picker: ^3.0.4
 
 dev_dependencies:
   flutter_test:
